--- a/Source/Client/Base/Base.csproj
+++ b/Source/Client/Base/Base.csproj
@@ -69,6 +69,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Service References\Service\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="UserManage\AddMember.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,11 +159,6 @@
       <DependentUpon>UserManage.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\Service\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UserManage\AddMember.resx">
@@ -215,30 +215,27 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\DataSources\Insight.WS.Client.Common.MainService.SYS_Code_Scheme.datasource" />
-    <None Include="Properties\DataSources\Insight.WS.Client.Common.MainService.SYS_Organization.datasource" />
-    <None Include="Properties\DataSources\Insight.WS.Client.Common.MainService.SYS_Role.datasource" />
-    <None Include="Properties\DataSources\Insight.WS.Client.Common.MainService.SYS_User.datasource" />
-    <None Include="Properties\DataSources\Insight.WS.Client.Common.MainService.SYS_UserGroup.datasource" />
     <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.Session.datasource" />
+    <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_Code_Scheme.datasource" />
+    <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_Organization.datasource" />
+    <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_Role.datasource" />
+    <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_User.datasource" />
+    <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_UserGroup.datasource" />
     <None Include="Properties\DataSources\System.Data.DataTable.datasource" />
-    <None Include="Service References\Service\Arrays1.xsd">
+    <None Include="Service References\Service\Arrays.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\Service\Insight.WS.Server.Common.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\SERP.Server.Common.xsd">
+    <None Include="Service References\Service\service.wsdl" />
+    <None Include="Service References\Service\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\service1.wsdl" />
-    <None Include="Service References\Service\service2.xsd">
+    <None Include="Service References\Service\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\service21.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\Service\System.Data1.xsd">
+    <None Include="Service References\Service\System.Data.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
