新建信分宝分支

--- a/Source/Server/ServicesHost/App.config
+++ b/Source/Server/ServicesHost/App.config
@@ -7,6 +7,7 @@
 
   <connectionStrings>
     <add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="xfbEntities" connectionString="metadata=res://*/xfbModel.csdl|res://*/xfbModel.ssdl|res://*/xfbModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.17.110;user id=root;persistsecurityinfo=True;database=xfbdb;password=root&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <runtime>
