--- a/Source/Server/Services/XinFenBao/Interface/app.config
+++ b/Source/Server/Services/XinFenBao/Interface/app.config
@@ -23,7 +23,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="xfbEntities" connectionString="metadata=res://*/xfbModel.csdl|res://*/xfbModel.ssdl|res://*/xfbModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.17.110;user id=root;persistsecurityinfo=True;database=xfbdb;password=root&quot;" providerName="System.Data.EntityClient" />
-    <add name="yunEntities" connectionString="metadata=res://*/yunModel.csdl|res://*/yunModel.ssdl|res://*/yunModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.104;initial catalog=tianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="WSEntities" connectionString="metadata=res://*/WSModel.csdl|res://*/WSModel.ssdl|res://*/WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="yunEntities" connectionString="metadata=res://*/yunModel.csdl|res://*/yunModel.ssdl|res://*/yunModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.104;initial catalog=tianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ws_Entities" connectionString="metadata=res://*/wsModel.csdl|res://*/wsModel.ssdl|res://*/wsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
