--- a/Source/Server/Services/XinFenBao/Interface/Interface.csproj
+++ b/Source/Server/Services/XinFenBao/Interface/Interface.csproj
@@ -68,10 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Citys.cs">
-      <DependentUpon>WSModel.tt</DependentUpon>
+      <DependentUpon>wsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Countys.cs">
-      <DependentUpon>WSModel.tt</DependentUpon>
+      <DependentUpon>wsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="IxfbInterface.cs" />
     <Compile Include="Orders.cs">
@@ -82,7 +82,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States.cs">
-      <DependentUpon>WSModel.tt</DependentUpon>
+      <DependentUpon>wsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="t_bill_stage.cs">
       <DependentUpon>xfbModel.tt</DependentUpon>
@@ -93,20 +93,20 @@
     <Compile Include="t_sys_user.cs">
       <DependentUpon>xfbModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="WSModel.Context.cs">
+    <Compile Include="wsModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>WSModel.Context.tt</DependentUpon>
+      <DependentUpon>wsModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="WSModel.cs">
+    <Compile Include="wsModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>WSModel.tt</DependentUpon>
+      <DependentUpon>wsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="WSModel.Designer.cs">
+    <Compile Include="wsModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>WSModel.edmx</DependentUpon>
+      <DependentUpon>wsModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="xfbInterface.cs" />
     <Compile Include="xfbModel.Context.cs">
@@ -154,22 +154,22 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>xfbModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <EntityDeploy Include="WSModel.edmx">
+    <EntityDeploy Include="wsModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>WSModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>wsModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="WSModel.Context.tt">
+    <None Include="wsModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>WSModel.edmx</DependentUpon>
-      <LastGenOutput>WSModel.Context.cs</LastGenOutput>
+      <DependentUpon>wsModel.edmx</DependentUpon>
+      <LastGenOutput>wsModel.Context.cs</LastGenOutput>
     </None>
-    <None Include="WSModel.edmx.diagram">
-      <DependentUpon>WSModel.edmx</DependentUpon>
+    <None Include="wsModel.edmx.diagram">
+      <DependentUpon>wsModel.edmx</DependentUpon>
     </None>
-    <None Include="WSModel.tt">
+    <None Include="wsModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>WSModel.edmx</DependentUpon>
-      <LastGenOutput>WSModel.cs</LastGenOutput>
+      <DependentUpon>wsModel.edmx</DependentUpon>
+      <LastGenOutput>wsModel.cs</LastGenOutput>
     </None>
     <None Include="xfbModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
