--- a/Source/Server/Services/Business/Settlement/Settlement.csproj
+++ b/Source/Server/Services/Business/Settlement/Settlement.csproj
@@ -52,7 +52,9 @@
   <ItemGroup>
     <Compile Include="ISettlement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Receipts.cs" />
     <Compile Include="Settlement.cs" />
+    <Compile Include="Deliverys.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.csproj">
