--- a/Source/Server/Services/XinFenBao/Interface/Interface.csproj
+++ b/Source/Server/Services/XinFenBao/Interface/Interface.csproj
@@ -36,108 +36,37 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\EntityFramework.6.0.0\lib\net40\EntityFramework.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\EntityFramework.6.0.0\lib\net40\EntityFramework.SqlServer.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="MySql.Data, Version=6.9.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\MySql.Data.6.9.6\lib\net40\MySql.Data.dll</HintPath>
-      <Private>True</Private>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\MySql.Data.Entity.6.9.6\lib\net40\MySql.Data.Entity.EF6.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\..\..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Citys.cs">
-      <DependentUpon>wsModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Countys.cs">
-      <DependentUpon>wsModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="IxfbInterface.cs" />
     <Compile Include="Orders.cs">
-      <DependentUpon>yunModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Orders_Goods.cs">
-      <DependentUpon>yunModel.tt</DependentUpon>
+      <DependentUpon>YSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States.cs">
-      <DependentUpon>wsModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="t_bill_stage.cs">
-      <DependentUpon>xfbModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="t_order_info.cs">
-      <DependentUpon>xfbModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="t_sys_user.cs">
-      <DependentUpon>xfbModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="wsModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>wsModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="wsModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>wsModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="wsModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>wsModel.edmx</DependentUpon>
-    </Compile>
     <Compile Include="xfbInterface.cs" />
-    <Compile Include="xfbModel.Context.cs">
+    <Compile Include="YSModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>xfbModel.Context.tt</DependentUpon>
+      <DependentUpon>YSModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="xfbModel.cs">
+    <Compile Include="YSModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>xfbModel.tt</DependentUpon>
+      <DependentUpon>YSModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="xfbModel.Designer.cs">
+    <Compile Include="YSModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>xfbModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="yunModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>yunModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="yunModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>yunModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="yunModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>yunModel.edmx</DependentUpon>
+      <DependentUpon>YSModel.edmx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -148,58 +77,22 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-    <EntityDeploy Include="xfbModel.edmx">
+    <EntityDeploy Include="YSModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>xfbModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>YSModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <EntityDeploy Include="wsModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>wsModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="wsModel.Context.tt">
+    <None Include="YSModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>wsModel.edmx</DependentUpon>
-      <LastGenOutput>wsModel.Context.cs</LastGenOutput>
+      <DependentUpon>YSModel.edmx</DependentUpon>
+      <LastGenOutput>YSModel.Context.cs</LastGenOutput>
     </None>
-    <None Include="wsModel.edmx.diagram">
-      <DependentUpon>wsModel.edmx</DependentUpon>
+    <None Include="YSModel.edmx.diagram">
+      <DependentUpon>YSModel.edmx</DependentUpon>
     </None>
-    <None Include="wsModel.tt">
+    <None Include="YSModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>wsModel.edmx</DependentUpon>
-      <LastGenOutput>wsModel.cs</LastGenOutput>
-    </None>
-    <None Include="xfbModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>xfbModel.edmx</DependentUpon>
-      <LastGenOutput>xfbModel.Context.cs</LastGenOutput>
-    </None>
-    <None Include="xfbModel.edmx.diagram">
-      <DependentUpon>xfbModel.edmx</DependentUpon>
-    </None>
-    <None Include="xfbModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>xfbModel.edmx</DependentUpon>
-      <LastGenOutput>xfbModel.cs</LastGenOutput>
-    </None>
-    <EntityDeploy Include="yunModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>yunModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="yunModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>yunModel.edmx</DependentUpon>
-      <LastGenOutput>yunModel.Context.cs</LastGenOutput>
-    </None>
-    <None Include="yunModel.edmx.diagram">
-      <DependentUpon>yunModel.edmx</DependentUpon>
-    </None>
-    <None Include="yunModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>yunModel.edmx</DependentUpon>
-      <LastGenOutput>yunModel.cs</LastGenOutput>
+      <DependentUpon>YSModel.edmx</DependentUpon>
+      <LastGenOutput>YSModel.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
