--- a/Source/Server/Common/Common.csproj
+++ b/Source/Server/Common/Common.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Function\ClearingDAL.cs" />
+    <Compile Include="Function\Util.cs" />
     <Compile Include="ORM\ABS_Advance.cs">
       <DependentUpon>WSModel.tt</DependentUpon>
     </Compile>
