--- a/Source/Client/Report/Report.csproj
+++ b/Source/Client/Report/Report.csproj
@@ -195,23 +195,23 @@
     <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_Report_Rules.datasource" />
     <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_Report_Templates.datasource" />
     <None Include="Properties\DataSources\System.Data.DataTable.datasource" />
-    <None Include="Service References\Service\Arrays.xsd">
+    <None Include="Service References\Service\Arrays1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\Insight.WS.Server.Common.ORM.xsd">
+    <None Include="Service References\Service\Insight.WS.Server.Common.ORM1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\Insight.WS.Server.Common.xsd">
+    <None Include="Service References\Service\Insight.WS.Server.Common1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\service.wsdl" />
-    <None Include="Service References\Service\service.xsd">
+    <None Include="Service References\Service\service1.wsdl" />
+    <None Include="Service References\Service\service2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\service1.xsd">
+    <None Include="Service References\Service\service21.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\System.Data.xsd">
+    <None Include="Service References\Service\System.Data1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
