--- a/Source/Server/ServicesHost/App.config
+++ b/Source/Server/ServicesHost/App.config
@@ -16,10 +16,6 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.8.6.0" newVersion="6.8.6.0" />
-      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
@@ -31,40 +27,19 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
     </providers>
   </entityFramework>
 
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
-    </DbProviderFactories>
-  </system.data>
-
   <connectionStrings>
-    <!--<add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="YSEntities" connectionString="metadata=res://*/YUN.YSModel.csdl|res://*/YUN.YSModel.ssdl|res://*/YUN.YSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=tianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="XFBEntities" connectionString="metadata=res://*/XFB.XFBModel.csdl|res://*/XFB.XFBModel.ssdl|res://*/XFB.XFBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=root;persistsecurityinfo=True;database=xfbdb_new;Charset=utf8;sqlservermode=True&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.104;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="YSEntities" connectionString="metadata=res://*/YUN.YSModel.csdl|res://*/YUN.YSModel.ssdl|res://*/YUN.YSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.104;initial catalog=wxtianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="XFBEntities" connectionString="metadata=res://*/XFB.XFBModel.csdl|res://*/XFB.XFBModel.ssdl|res://*/XFB.XFBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.17.110;user id=root;password=root;persistsecurityinfo=True;database=xfbdb_kaifa;Charset=utf8;sqlservermode=True&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.204;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="YSEntities" connectionString="metadata=res://*/YUN.YSModel.csdl|res://*/YUN.YSModel.ssdl|res://*/YUN.YSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.204;initial catalog=tianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="XFBEntities" connectionString="metadata=res://*/XFB.XFBModel.csdl|res://*/XFB.XFBModel.ssdl|res://*/XFB.XFBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.17.110;user id=root;password=root;persistsecurityinfo=True;database=xfbdb_new;Charset=utf8;sqlservermode=True&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.203;initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="YSEntities" connectionString="metadata=res://*/YUN.YSModel.csdl|res://*/YUN.YSModel.ssdl|res://*/YUN.YSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.17.203;initial catalog=tianyao2014;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="XFBEntities" connectionString="metadata=res://*/XFB.XFBModel.csdl|res://*/XFB.XFBModel.ssdl|res://*/XFB.XFBModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.17.123;user id=root;password=BmZxKky1xfb;persistsecurityinfo=True;database=xfbdb;Charset=utf8;sqlservermode=True&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <appSettings>
     <add key="Address" value="localhost" />
-    <add key="HttpPort" value="7280" />
-    <add key="TcpPort" value="7210" />
+    <add key="HttpPort" value="6280" />
+    <add key="TcpPort" value="6210" />
     <add key="IsCompres" value="false" />
     <add key="MaxAuthorized" value="100000000" />
-    <add key="ImageLocal" value="\\192.168.17.109\var\nfs\xfbResources\pic_file" />
-    <add key="ImageSite" value="http://192.168.17.109:8080/xfbResources/pic_file" />
   </appSettings>
 
   <system.web>
