--- a/Source/Server/Common/Common.csproj
+++ b/Source/Server/Common/Common.csproj
@@ -83,18 +83,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExtendClass\AccessToken.cs" />
     <Compile Include="ExtendClass\CSubmitState.cs" />
     <Compile Include="ExtendClass\Entities.cs" />
     <Compile Include="ExtendClass\ReturnSMS.cs" />
-    <Compile Include="Function\ClearingDAL.cs" />
-    <Compile Include="Function\Util.cs" />
     <Compile Include="ExtendClass\Services.cs" />
-    <Compile Include="Function\ContractDAL.cs" />
-    <Compile Include="Function\ReportDAL.cs" />
-    <Compile Include="Function\CommonDAL.cs" />
-    <Compile Include="Function\MasterDataDAL.cs" />
     <Compile Include="ExtendClass\OnlineManage.cs" />
+    <Compile Include="Function\DataAccess.cs" />
+    <Compile Include="Function\Clearing.cs">
+      <DependentUpon>DataAccess.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Function\Contract.cs">
+      <DependentUpon>DataAccess.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Function\General.cs" />
+    <Compile Include="Function\Report.cs">
+      <DependentUpon>DataAccess.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Function\MasterData.cs">
+      <DependentUpon>DataAccess.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Function\Util.cs" />
     <Compile Include="ORM\ABS_Advance.cs">
       <DependentUpon>WSModel.tt</DependentUpon>
     </Compile>
