--- a/Source/VerifyServer/App.config
+++ b/Source/VerifyServer/App.config
@@ -30,7 +30,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WSEntities" connectionString="metadata=res://*/UserModel.csdl|res://*/UserModel.ssdl|res://*/UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
 </configuration>
