--- a/Source/Server/Services/MasterDatas/MasterDatas.csproj
+++ b/Source/Server/Services/MasterDatas/MasterDatas.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
   </ItemGroup>
