--- a/Source/Server/InsightServer/App.config
+++ b/Source/Server/InsightServer/App.config
@@ -37,7 +37,8 @@
   <appSettings>
     <add key="Address" value="localhost" />
     <add key="IsCompres" value="false" />
-    <add key="MaxAuthorized" value="100000000" />
+    <add key="CompatibleVersion" value="10000" />
+    <add key="UpdateVersion" value="10000" />
   </appSettings>
 
   <system.web>
