--- a/Source/Test/interface/Interface.csproj
+++ b/Source/Test/interface/Interface.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -49,16 +50,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.Session.datasource" />
     <None Include="Properties\DataSources\Insight.WS.Client.Common.Service.SYS_User.datasource" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Server\Common\Common.csproj">
-      <Project>{132ce7b2-a22c-430e-947c-db629960ae7a}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
