--- a/Source/Server/InsightServer/App.config
+++ b/Source/Server/InsightServer/App.config
@@ -36,7 +36,7 @@
 
   <appSettings>
     <add key="Address" value="localhost" />
-    <add key="IsCompres" value="true" />
+    <add key="IsCompres" value="false" />
     <add key="CompatibleVersion" value="10000" />
     <add key="UpdateVersion" value="10000" />
   </appSettings>
