--- a/Source/Test/interface/App.config
+++ b/Source/Test/interface/App.config
@@ -15,7 +15,7 @@
     <add key="DefaultLookAndFeel" value="DevExpress Style"/>
     <add key="Address" value="localhost"/>
     <add key="Port" value="6210"/>
-    <add key="IsCompres" value="true"/>
+    <add key="IsCompres" value="false"/>
     <add key="DocPrint"/>
     <add key="TagPrint"/>
     <add key="BilPrint"/>
